修改convertservice , 添加dcc jar包